mocha.css
/* ... */
.cp__sidebar-main-content {
  margin: 0.25rem 0 1.25rem 0;
  max-width: 940px !important;
  padding: 15px 40px;
  width: 80%;
	height: fit-content;
}

.cp__right-sidebar .sidebar-item {
  margin: 1.25rem 1.25rem;
}

.cp__sidebar-main-content,
.cp__right-sidebar .sidebar-item {
  background-color: var(--main-content-bg);
  border: 1px solid var(--ls-border-color);
  box-shadow: var(--box-shadow-lg);
}
.cp__sidebar-main-content[data-is-full-width="true"] {
  max-width: 100vw !important;
}

.cp__right-sidebar-inner .resizer:hover {
  background-color: rgb(var(--golden), 0.5);
}

/* MAIN CONTENT & CP Right Sidebar END */

/* START Journal Header */
.journal-title .title::before,
.is-journals .title::before {
  content: "📅";
  font-size: 0.8em;
  margin-right: 10px;
  vertical-align: text-bottom;
}
/* Journal Header END */

/* START TASKS */

.form-checkbox {
  border-radius: var(--radius-sm);
	opacity: 0.8;
}

.form-checkbox:checked {
  border: none;
}

.priority {
  font-size: 0;
  visibility: hidden;
}

a[priority]::before,
.priority::before {
  background-repeat: no-repeat;
  border: 1px solid var(--transparent);
  border-radius: 100%;
  display: inline-block;
  font-size: 12px;
  height: 16px;
  visibility: visible;
  width: 16px;
}

a[priority]::before {
  /* display: inline-flex ; */
  margin-right: 5px;
  /* margin-top: 5px; */
}

.priority {
  font-weight: bold;
}

a[priority="A"]::before,
.priority[href="#/page/A"]::before {
  background-color: var(--red);
  content: " ";
}

a[priority="B"]::before,
.priority[href="#/page/B"]::before {
  background-color: var(--orange);
  content: " ";
}

a[priority="C"]::before,
.priority[href="#/page/C"]::before {
  background-color: var(--green);
  content: " ";
}

.timestamp,
[data-drawer-name="logbook"] {
  font-style: italic;
}

/* TASKS END*/

/* START External Link */

.external-link::before {
  content: "🌏";
  margin-right: 5px;
}

.external-link {
  border-bottom: 1px dotted var(--external-link-color);
  color: var(--external-link-color);
}

.external-link:hover {
  border-bottom: 1px dotted var(--external-link-color-hover);
  color: var(--external-link-color-hover);
}

/* External Link END */

/* START Bullet & Bullet Container */

.bullet-container {
  height: 20px;
  width: 20px;
}

.block-children-left-border:hover {
  background-color: rgba(var(--golden), 1);
	transition: var(--transition);
}

/* Bullet & Bullet Container END */

/* Inline Header Tags Adjustments */

.ls-block :is(h1, h2) {
  border: none;
  margin: 0;
}

.ls-block :is(h1, h2, h3, h4, h5, h6)::after {
  background-size: 16px 16px;
  content: "";
  display: inline-flex;
  height: 16px;
  margin-left: 5px;
  opacity: 0;
  vertical-align: middle;
  width: 16px;
}

.ls-block :is(h1, h2, h3, h4, h5, h6):hover::after {
  opacity: 1;
  transition: all 0.5s ease-in-out;
}

.ls-block h1::after {
  background-image: url("./assets/h1.svg");
}

.ls-block h2::after {
  background-image: url("./assets/h2.svg");
}

.ls-block h3::after {
  background-image: url("./assets/h3.svg");
}

.ls-block h4::after {
  background-image: url("./assets/h4.svg");
}

.ls-block h5::after {
  background-image: url("./assets/h5.svg");
}

.ls-block h6::after {
  background-image: url("./assets/h6.svg");
}

.editor-inner .h1.uniline-block,
.ls-block h1 {
  font-size: 2em;
  min-height: 1.5em;
}

.editor-inner .h2.uniline-block,
.ls-block h2 {
  font-size: 1.5em;
  min-height: 1.5em;
  position: relative;
  top: -3px;
}

.editor-inner .h3.uniline-block,
.ls-block h3 {
  font-size: 1.3em;
  min-height: 1.5em;
  position: relative;
  top: -4px;
}

.editor-inner .h4.uniline-block,
.ls-block h4,
.editor-inner .h5.uniline-block,
.ls-block h5,
.editor-inner .h6.uniline-block,
.ls-block h6 {
  font-size: 1em;
  min-height: 1.5em;
  position: relative;
  top: -5px;
}

.editor-inner .multiline-block:is(.h1, .h2, .h3, .h4, .h5, .h6)::first-line,
.editor-inner .uniline-block:is(.h1, .h2, .h3, .h4, .h5, .h6),
.ls-block :is(h1, h2, h3, h4, h5, h6) {
  font-weight: 600;
}

.editor-inner .uniline-block:is(.h1, .h2),
.ls-block :is(h1, h2) {
  border-bottom: var(--transparent);
  margin: 0.4em 0 0;
}

.block-ref .editor-inner :is(.h1, .h2),
.block-ref .ls-block :is(h1, h2) {
  border-bottom: none;
}

.block-ref :is(h1, h2, h3, h4, h5, h6) {
  border-bottom: none;
  font-size: 1rem;
}

.editor-inner .uniline-block:is(.h1, .h2),
.ls-block :is(h1, h2) {
  border-bottom: var(--transparent);
}

.doc-mode .block-children {
  border-left: none !important;
}

.document-mode .editor-inner .h1,
.document-mode .ls-block h1 {
  margin: 0.34em 0;
}

.document-mode .editor-inner .h2,
.document-mode .ls-block h2 {
  margin: 0.3em 0;
}

.document-mode .editor-inner .h3,
.document-mode .ls-block h3 {
  margin: 0.28em 0;
}

.document-mode .editor-inner .h4,
.document-mode .ls-block h4 {
  margin: 0.26em 0;
}

.document-mode .editor-inner .h5,
.document-mode .ls-block h5 {
  margin: 0.24em 0;
}

.document-mode .editor-inner .h6,
.document-mode .ls-block h6 {
  margin: 0.22em 0;
}

.document-mode .ls-block {
  margin-bottom: 0rem;
}

/* Header Tag Adjustments END */

/* START #tag  */
.content a.tag {
  --tag-border: 255, 221, 4;
  --tag-bg-color: 255, 253, 245;
  background-color: rgb(var(--tag-bg-color), 0.1);
  border: 1px solid var(--transparent);
  border-radius: var(--radius-xl);
  color: var(--ls-primary-text-color);
  display: inline;
  font-size: 1em;
  padding: 0 5px;
}

html[data-theme="light"] .content a.tag {
  background-color: rgb(var(--tag-bg-color), 1);
  border: 1px solid rgb(var(--tag-border));
}

html[data-theme="dark"] .content a.tag {
  background-color: rgb(var(--tag-bg-color), 0.1);
  border: 1px solid rgb(var(--tag-border), 0.6);
}

/* #tag END  */

/* START Sidebar */

html[data-theme="light"] .cp__header > .l a {
  color: var(--left-sb-txt-color);
}

.left-sidebar-inner,
.cp__sidebar-left-layout::before {
  background-color: var(--left-sb-bg-color);
}
/* ... */

